glx/testdata/invalid/comprehensive-broken-references/sources/source-register.glx
sources:
  source-register:
    title: "Parish Register"
    repository: repository-nonexistent

